# codex-message-manage

./: .gitignore  Cargo.toml  README.md  TODO.md  codex-manager.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  VirtualList.vue  api.ts  style.css
frontend/src/components/: AppDialogs.vue  Sidebar.vue  ThreadContent.vue
frontend/src/components/thread/: EventDetailDrawer.vue  EventEditDialog.vue  HistoryEditDrawer.vue  HistoryTab.vue  ThreadEditDrawer.vue  ThreadHeader.vue  ThreadSearch.vue  TimelineTab.vue
frontend/src/composables/: useBackup.ts  useConfig.ts  useDelete.ts  useSearch.ts  useStats.ts  useThreadDetail.ts  useThreadEvents.ts  useThreadHistory.ts  useThreadList.ts
frontend/src/utils/: format.ts
scripts/: build-release.sh  watch-gh-run.sh
src/: main.rs  models.rs  store.rs
